samples/_failures_safe/1761294451_3cb710_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9532dc6b.c: In function ‘main’:
./samples/SAFE/__tmp_9532dc6b.c:140:5: error: expected declaration or statement at end of input
  140 |     }
      |     ^
